--- a/index.html
+++ b/index.html
@@ -66,9 +66,40 @@
       <!--header section start-->
       <!--main section start-->
       <main>
-        <section>
-          
-        </section>
+        <!-- Menu section  -->
+        <div class="menu">
+          <ul class="menu-outer">
+            <li><a href="#"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Vegan Chinese noodles"><img src="https://via.placeholder.com/300x450" alt="image alt"></a>
+                </li>
+                <li><a href="#" title="Vegan Chinese noodles">Vegan Chinese noodles</a></li>
+              </ul>
+            </li>
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Mega Veggie Burgers"><img src="https://via.placeholder.com/300x450" alt="image alt"></a>
+                </li>
+                <li class="tag"><a href="#">with cheddar cheese and gherkins</a></li>
+                <li><a href="#" title="Mega Veggie Burgers">Mega Veggie burgers</a></li>
+              </ul>
+            </li>
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Roasted Game Bird Pie"><img src="https://via.placeholder.com/300x450" alt="image alt"></a>
+                </li>
+                <li><a href="#" title="Roasted Game Bird Pie">Roasted game bird pie</a></li>
+              </ul>
+            </li>
+            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
+          </ul>
+        </div>
+
+
 
       </main>
       <!--main section end-->
