Get inspired section complete

--- a/index.html
+++ b/index.html
@@ -99,7 +99,54 @@
           </ul>
         </div>
 
+        <section>
+          <h2> Get inspired</h2>
+          <h4>hand-picked bits and bytes</h4>
+          <ul class="inspired-outer">
+            <li>
+              <ul>
+                <li><a href="#" title="Fresh dinner"><img src="https://via.placeholder.com/200x200" title="A fresh zingy&#44; dinner for two"></a></li>
+                <li>A fresh zingy&#44; dinner for two </li>
+              </ul></li>
+            <li>
+              <ul>
+              <li><a href="#" title="Sharpen your skills at the Jamie Oliver Cookery school"><img src="https://via.placeholder.com/200x200" title="Sharpen your skills at the Jamie Oliver Cookery school"></a></li>
+              <li>Sharpen your skills at the Jamie Oliver Cookery school</li>
+              </ul></li> 
+            <li>
+              <ul><li>
+                <a href="#" title="How to get Your Vitamins And Minerals"><img src="https://via.placeholder.com/200x200" title="How to get Your Vitamins And Minerals"></a></li>
+                <li>How to get  your vitamins and minerals</li>
+              </ul></li>                       
+          </ul>
+          <ul class="inspired-outer">
+            <li>
+              <ul>
+                <li><a href="#" title="What Are The Benefits Of Wholegrain"><img src="https://via.placeholder.com/200x200" title="What Are The Benefits Of Wholegrain"></a></li>
+                <li>What are the benefits of wholegrain&quest;</li>
+              </ul></li>
+            <li>
+              <ul>
+                <li><a href="#" title="Whip up a special pud in less than an half an hour"><img src="https://via.placeholder.com/200x200" title="Whip up a special pud in less than an half an hour"></a></li>
+                <li>Whip up a special pud in less than an half an hour</li>
+              </ul></li> 
+            <li>
+              <ul>
+                <li><a href="#" title="Buy Jamie's Book now &#33;"><img src="https://via.placeholder.com/200x200" title="Buy Jamie's Book now &#33;"></a></li>
+                <li>Buy Jamie's Book now &#33;</li>
+              </ul></li>                       
+          </ul>
+          <figure>
+          <img src="https://via.placeholder.com/300x600" alt="image alt" >
+          <figcaption>
+            <h2>Treat your food to a brand new bit of kit</h2>
+            <p>shop the hotpoint range&gt;</p>
+          </figcaption>
+          </figure>
+            
 
+
+        </section>
 
       </main>
       <!--main section end-->
