More to explore section complete

--- a/index.html
+++ b/index.html
@@ -148,6 +148,38 @@
 
         </section>
 
+        <section>
+          <h2>More to explore</h2>
+          <p>top features &amp; videos</p>
+          <ul class="explore-outer">
+              <li><a href="#"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
+              <li>
+              <ul>
+                <li><a href="#" title="How To Replace Glueten in Baking"><img src="https://via.placeholder.com/250x200" ></a></li>
+                <li>How to replace gluten in Baking </li>
+              </ul></li>                    
+              <li>
+              <ul>
+                <li><a href="#" title="Diy kids party food"><img src="https://via.placeholder.com/250x200" ></a></li>
+                <li>Diy kids party food </li>
+              </ul></li>                  
+              <li>
+              <ul>
+                <li><a href="#" title="Lamb & Chickpea Curry"><img src="https://via.placeholder.com/250x200" title="Lamb & Chickpea Curry"></a></li>
+                <li>Lamb & Chickpea Curry </li>
+              </ul></li>                  
+              <li>
+              <ul>
+                <li><a href="#" title="How to make your own fish fingers"><img src="https://via.placeholder.com/250x200" title="How to make your own fish fingers"></a></li>
+                <li>How to make your own fish fingers </li>
+              </ul></li>                                                             
+              <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
+
+            
+          </ul>
+        </section>
+
+
       </main>
       <!--main section end-->
       <!--footer section start-->
