Recipes section complete

--- a/index.html
+++ b/index.html
@@ -179,6 +179,172 @@
           </ul>
         </section>
 
+        <section>
+          <h2>Receipes</h2>
+          <p>get cooking &amp; sharing</p>
+          <ul class="filter-by-receipes">
+            <li>filter by&#58;</li>
+            <li>all receipes</li>
+            <li>popular</li>
+            <li>chicken</li>
+            <li>fruit</li>
+            <li>vegan</li>
+            <li>salad</li>
+          </ul>
+          <ul class="receipes-outer">
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="chicken"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>
+                <li class="receipe-tag"><a href="#">chicken</a></li>
+                <li><a href="#" >Chicken fajitas with homemade guacamole &amp; salsa</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Dairy Free"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>
+                <li class="receipe-tag"><a href="#">dairy &#45; free</a></li>
+                <li><a href="#" >Fennal , crab &amp; orange salad</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Paprika Salad"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>               
+                <li><a href="#" >Paprika-spiked chicken thighs</a></li>
+              </ul>
+            </li>                        
+
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Turkey Salad"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>
+                <li class="receipe-tag"><a href="#">gluten &#45; free</a></li>
+                <li><a href="#" >Turkey salad &amp; warm cleamenting dressing</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Merinated Chicken Kebabs"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>
+                <li class="receipe-tag"><a href="#">dairy &#45; free</a></li>
+                <li><a href="#" >The best Marinated chicken kebabs</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Super Noodle Ramen With Kale &amp; Barbeque Mashrooms"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>
+                <li class="receipe-tag"><a href="#">vegan</a></li>
+                <li><a href="#" >Super noodle ramen with kale &amp; barbeque mashrooms</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="SIndian&#45;Style Baked Chicken"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>
+                <li class="receipe-tag"><a href="#">gluten &#45; free</a></li>
+                <li><a href="#" >Indian&#45;style baked chicken</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Moorish crunch salad"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>
+                <li class="receipe-tag"><a href="#">dairy &#45; free</a></li>
+                <li><a href="#" >Moorish crunch salad</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Saut&eacute;ed Jerusalem artichokes with garlic and bay leaves"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>
+                <li class="receipe-tag"><a href="#">dairy &#45; free</a></li>
+                <li><a href="#" >Saut&eacute;ed Jerusalem artichokes with garlic and bay leaves</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Vegetable Bhaji Salad"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>
+                <li class="receipe-tag"><a href="#">vegetarian</a></li>
+                <li><a href="#" >Vegetable bhaji salad</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Quinoa&comma; feta &amp; broad bean salad"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>
+                <li class="receipe-tag"><a href="#">gluten &#45; free</a></li>
+                <li><a href="#" >Quinoa&comma; feta &amp; broad bean salad</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Stilton &amp; Sprouting Broccoli Frittata"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>
+                <li class="receipe-tag"><a href="#">vegetarian</a></li>
+                <li><a href="#" >Stilton &amp; sprouting broccoli frittata</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Lindsay Lohan&apos;s chicken pot pie"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>
+                <li><a href="#" >Lindsay Lohan&apos;s chicken pot pie</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Rosemary & apricot friands"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>
+                <li class="receipe-tag"><a href="#">vegetarian</a></li>
+                <li><a href="#" >Rosemary &amp; apricot friands</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <ul>
+                <li>
+                  <a href="#" title="Summer Salmon Salad"><img src="https://via.placeholder.com/200x300" alt="image alt"></a>
+                </li>
+                <li class="receipe-tag"><a href="#">gluten &#45; free</a></li>
+                <li><a href="#" >Summer salmon salad</a></li>
+              </ul>
+            </li>
+          </ul>
+          <h3>
+            <a href="#" title="View More">View more</a>
+          </h3>
+
+        </section>
 
       </main>
       <!--main section end-->
