--- a/index.html
+++ b/index.html
@@ -350,6 +350,15 @@
       <!--main section end-->
       <!--footer section start-->
       <footer>
+       <ul>
+         <li><a href="#">t &amp; c</a></li>
+         <li><a href="#">privacy</a></li>
+         <li><a href="#">cookie policy</a></li>
+         <li><a href="#">careers</a></li>
+         <li><a href="#">contact</a></li>
+         <li><a href="#">sitemap</a></li>
+         <li>&copy; 2018 jamie oliver enterprices limited</li>
+       </ul> 
       </footer>
       <!--footer section end-->
     </div>
