icon added to header

--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
             </ul>
           </nav>
           <ul>
-            <li>Follow</li>
+            <li>
+              <ul>
+                <li>Follow</li>
+                <li><i class="fa fa-chevron-down" aria-hidden="true"></i></li>
+              </ul>
+            </li>
             <li>
               <i class="fa fa-search" aria-hidden="true"></i>
             </li>
