--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <!--main section start-->
       <main>
         <!-- Menu section  -->
-        <div class="menu">
+        <div class="menu wrapper">
           <ul class="menu-outer">
             <li><a href="#"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
             <li>
@@ -104,7 +104,7 @@
           </ul>
         </div>
 
-        <section>
+        <section class="wrapper">
           <h2> Get inspired</h2>
           <h4>hand-picked bits and bytes</h4>
           <ul class="inspired-outer">
@@ -153,7 +153,7 @@
 
         </section>
 
-        <section>
+        <section class="wrapper">
           <h2>More to explore</h2>
           <p>top features &amp; videos</p>
           <ul class="explore-outer">
@@ -184,7 +184,7 @@
           </ul>
         </section>
 
-        <section>
+        <section class="wrapper">
           <h2>Receipes</h2>
           <p>get cooking &amp; sharing</p>
           <ul class="filter-by-receipes">
